# AgentDesk

./: .claudeignore  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DRIFT_REPAIR_ANALYSIS.md  EPIC_3016_DESIGN.md  FEATURES.md  LICENSE  Makefile  NOTICE  OVERHAUL_LOG.md  README.md  TEST_PLAN.md  agentdesk.example.yaml  build.rs  cargo_output.txt  commit_body.md  commit_body.txt  commit_message.md  commit_message.txt  commit_msg.md  commit_msg.txt  defaults.json  dummy_test.sh  fix_change_surfaces.py  fix_ci_drift.sh  fix_fmt.patch  fix_repo.sh  fix_script.py  fix_srp.py  fix_surfaces.patch  fix_tests.sh  get-facade-pilot-candidates-2.sh  get-facade-pilot-candidates-3.sh  get-facade-pilot-candidates.sh  justfile  list_routines_test.rs  (+48 more)
.cargo/: config.toml
.claude/: settings.json
.claude/commands/: adk-release.md  agentdesk-restart.md  agentdesk-runtime-ops.md
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-macos-trusted.yml  ci-main.yml  ci-nightly.yml  ci-pr-infra-retry.yml  ci-pr.yml  ci.yml  main-ci-triage.yml  pr-ci-fixer.yml  regen-docs.yml
.jules/: accessor.md  doctor.md  domainkeeper.md  facadepilot.md  refiner.md  steward.md
PRD/: _template.md  model-picker-session-strategy.md
config/agents/: _shared.prompt.md  adk-dashboard.prompt.md  adk-deadlock-manager.prompt.md  ch-ad.prompt.md  ch-dd.prompt.md  ch-pd.prompt.md  ch-pmd.prompt.md  ch-qad.prompt.md  ch-tad.prompt.md  ch-td.prompt.md  chef-goat.prompt.md  family-counsel.prompt.md  (+9 more)
dashboard/: index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
docs/: adk-dashboard-design-direction-v1.md  adk-dashboard-design-direction.md  adk-dashboard-design-implementation-todo.md  adr-settings-precedence.md  agent-onboarding.md  agent-quality.md  architecture.md  auto-queue-preflight.md  auto-queue-turn-finalization.md  background-task-pattern.md  ci-self-hosted-runner.md  claude-code-2.1.112-review-issue-34.md  claude-md-load-order.md  codex-cli-0.121.0-review-issue-35.md  codex-exec-policy.md  codex-remote-ssh-policy.md  codex-tui-cancel-boundary.md  config-domains.md  dev-bots.md  discord-outbound-remaining-producers.md  discord-session-lifecycle.md  gemini-cli-0.38.1-review-issue-36.md  github-triage-routing.md  health-port-unification-checklist.md  high-risk-recovery-lane.md  invariants.md  launchd-to-routine-migration-plan.md  meeting-domain-expert-orchestration.md  memory-scope.md  multimachine-failover.md  openclaw-migrate.md  openclaw-migration.md  policy-sql-guard.md  policy-tick-bottleneck-735.md  policy-typed-facade.md  postgres-cutover.md  postgres-migration-checksum-repair.md  qwen-cli-0.14.5-review-issue-37.md  recovery-paths.md  relay-state-contract.md  (+6 more)
migrations/: 001_initial.sql
policies/: 00-escalation.js  00-pr-tracking.js  auto-queue.js  ci-recovery.js  default-pipeline.yaml  deploy-pipeline.js  kanban-rules.js  merge-automation.cap.yaml  merge-automation.js  phase_gate.js  pipeline.js  review-automation.cap.yaml  review-automation.js  timeouts.js  triage-rules.js
routines/: agent-checkpoint-review.js  family-profile-probe-obujang.js  family-profile-probe-yohoejang.js  local-worktree-gc.js  script-summary.js
scripts/: _defaults.sh  agentdesk-dcserver.service  agentdesk.service  analyze_prs.py  archive-config-backups.sh  audit_allowlist.toml  audit_legacy_sqlite_sunset.py  audit_maintainability.py  audit_maintainability_config.toml  audit_maintainability_giant_baseline.toml  audit_state_lint_hardening.py  auto-queue-monitor.sh  auto_queue_monitor_state.py  build-release.sh  check-ci-runner-hardening.sh  check-portable-paths.py  check_agent_maintenance_docs.py  check_api_docs_coverage.py  check_await_holding_lock_ratchet.py  check_clippy_allow_ratchet.py  check_contract_symbol_refs.py  check_hotfile_ratchet.py  check_inflight_blind_save_ratchet.py  check_log_key_drift.py  check_message_outbox_inserts.py  check_policy_db_capabilities.py  check_postgres_migration_checksums.py  ci-macos-fresh-user-smoke.sh  ci-script-checks.sh  ci-timeout.py  clippy_allow_occurrences.json  com.agentdesk.plist  com.agentdesk.release.plist  deploy-dashboard.sh  deploy-dev.sh  deploy-release.sh  deploy.sh  e2e-tui-relay-scenarios.sh  e2e-wrapper-relay-toggle.sh  ensure-agentdesk-cli.sh  (+35 more)
skills/: manifest.json
src/: api_caller_observability.rs  app_state.rs  bootstrap.rs  config.rs  config_live_reload.rs  credential.rs  error.rs  eventbus.rs  high_risk_recovery.rs  high_risk_recovery.rs.orig  integration_tests.rs  kanban.rs  launch.rs  lib.rs  logging.rs  main.rs  manual_intervention.rs  memory_import_guardrails.rs  pipeline.rs  receipt.rs  reconcile.rs  runtime.rs  runtime_layout.rs
tests/: TEST_PLAN.md  test_actionable_ops_alert_routing.py  test_agent_maintenance_docs.py  test_alert_dedupe_4448.py  test_analyze_prs.py  test_api_docs_coverage.py  test_audit_maintainability.py  test_audit_state_lint_hardening.py  test_auto_queue_monitor.py  test_auto_queue_monitor.sh  test_await_holding_lock_ratchet.py  test_ci_timeout.py  test_clippy_allow_ratchet.py  test_contract_symbol_refs.py  test_daily_log_digest.py  test_deploy_preflight_resources_4255.sh  test_deploy_release_fast_profile.py  test_deploy_rollback_health_4348.sh  test_deploy_smoke_warn_scope_4511.sh  test_discord_thread_create_ci_wiring.py  test_expand_tilde.rs  test_fast_check_ci_wiring.py  test_git_hook_python_resolution.py  test_inflight_blind_save_ratchet.py  test_install_bootstrap_portable.py  test_inventory_giant_split.py  test_launchd_migrated_entrypoints.py  test_legacy_sqlite_sunset_audit.py  test_log_key_drift.py  test_manage_dawn_launchdaemons.py  test_manual_rebind_platform_guard.py  test_message_outbox_inserts.py  test_operator_init_portable.py  test_pg_tunnel.py  test_policy_db_capabilities.py  test_portable_docs_examples.py  test_portable_operator_migration.py  test_portable_path_lint.py  test_postgres_migration_checksum_guard.py  test_relay_recovery_ci_wiring.py  (+7 more)
(+2011 files in other folders)
